1.3.0 Fix compile version